apps/arcs/psi/base/psi-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: psi-egress
  namespace: arc-psi
spec:
  endpointSelector:
    matchLabels:
      app: psi-orchestrator
  egress:
    # DNS to kube-dns
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
